# NXDNClients

./: .gitignore  CMakeLists.txt  PACKAGING.md  README.md
NXDNGateway/: CMakeLists.txt
NXDNParrot/: CMakeLists.txt
NXDNReflector/: CMakeLists.txt
cmake/: debian-commons.cmake  debian-gateway.cmake  debian-parrot.cmake  debian-reflector.cmake  debian.cmake  git_version.sh  packaging.cmake
packaging/: NXDNGateway.ini  NXDNReflector.ini
packaging/debian/: nxdn-gateway.service  nxdn-parrot.service  nxdn.cron  nxdn.logrotate  nxdn.service
packaging/debian/control/: conffiles  postinst  postrm
packaging/debian/systemd/: nxdn-parrot.env  nxdn-parrot.service  nxdn-reflector.service
